2002-08-27  Vino Crescini  <jcrescin@cit.uws.edu.au>

	* exp/atom.c :
	* exp/atom.h :
	* ident/ident.h :

	  - Simplified macros by taking the base structure as the parameter,
	    instead of the unsigned ints.

	  - Cleanups.

	* parser/parser.y :
	* exp/expression.c :

	  - Before adding an atom into an expression, first perform a few
	    checks:

	    - Is the atom already in the expression ?
	    - Is the entire expression already false ?
	    - Is the negation of the new atom already in the expression ?

	* exp/expression.c :

	  - Adding atoms to an expression will now be checked first.
	    If the atom is aleady there, simply accept silently, if
	    the negation is already in, replace the whole expression
	    with a constant FALSE.

	* parser/parser.y :

	  - Added debug code to dump the contents of the initial expression.

2002-08-26  Vino Crescini  <jcrescin@cit.uws.edu.au>

	* exp/atom.c:
	* exp/atom.h:

	  - Modified atom checks to allow variables in identifiers.

	* exp/compexp.h :
	* exp/compatom.h :

	  - Structures for complex (non-ground) terms. Includes ground
	    expression plus a variable list.

	* ident/ident.h:

	  - Added variable type.

	* parser/parser.y:
	* parser/scanner.l:

	  - Defined a function exit_error to be used instead of yyerror. 
	    Makes a call to exit.

	  - Uses stringlist to store variable definitions at the beginning of
	    a transformation definition.

	  - Uses compexp/compatom to store expressions with variables for
	    complex (non-ground) atoms and expressions.

	* datastruct/stringlist.c :
	* datastruct/stringlist.h :

	  - Added a simple list wrapper for strings.

	* trans/Makefile :
	* trans/varlist.c :
	* trans/varlist.h :

	  - Added a structure to hold a list of variables (name + identifier
	    mapping).

	* ident/identlist.c :

	  - More cleanups. Declare them as ident_type instead of ident_type *
	    to avoid memory allocation/dealocation.

2002-08-25  Vino Crescini  <jcrescin@cit.uws.edu.au>
