@@ -1,5 +1,13 @@
 2002-08-27  Vino Crescini  <jcrescin@cit.uws.edu.au>
 
+	* main/epilog.c :
+	* parser/parser.h :
+	* parser/parser.y :
+
+	  - Changed all debug printfs to fprintf to stderr.
+
+	  - Defined yyerr to allow a unified redirection.
+
 	* exp/atom.c :
 	* exp/atom.h :
 	* ident/ident.h :
